@@ -1,16 +1,19 @@
 #pragma once
+#include <string>
+
 #include "Renderable.h"
 #include "World.h"
 
 class Texture;
 class EntityZone;
+class Text;
 
 class Entity : 
 	public Renderable
 {
 public:
 
-	Entity(int x, int y, Graphics* graphics, Texture* texture, int const* FRAME_COUNT, int const* FRAME_WIDTH, int const* FRAME_HEIGHT, World* world);
+	Entity(int x, int y, Graphics* graphics, Texture* texture, int const* FRAME_COUNT, int const* FRAME_WIDTH, int const* FRAME_HEIGHT, World* world, int id);
 	~Entity();
 	virtual void render();
 	virtual void calcFrame(int framerate);
@@ -19,19 +22,23 @@ public:
 
 	EntityZone* getCurrentEntityZone();
 	void setCurrentEntityZone(EntityZone* entityZone);
+	int getId();
 
-	int getX();
-	int getY();
+	Text* getDebugText();
 
 protected:
 
 	Texture* texture;
 	int currentFrame;
 	World* world;
+	Text* debugText;
 	int const* FRAME_COUNT;
 	int const* FRAME_WIDTH;
 	int const* FRAME_HEIGHT;
 	EntityZone* currentEntityZone;
+	std::string entityName;
+	int id;
+	virtual void updateDebugText();
 
 };
 
